force systems sentencing tense
put all titles, subtitles, and subsubtitles into sentencing tense in force systems page

--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -23,7 +23,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
       </ul>
       </div>
 
-<Section title="Force Systems" id="force_systems"></Section>
+<Section title="Force systems" id="force_systems"></Section>
 
 <SubSection title="Equivalent systems" id="equivalent_systems">
 
@@ -39,7 +39,7 @@ It can be helpful to know what are equivalent transformations for both forces an
 
 </SubSection>
 
-<SubSubSection title="Allowable Force Transformations" id="allowable force transformations">
+<SubSubSection title="Allowable force transformations" id="allowable force transformations">
 
 Replacing two forces with their vector sum: 
 <Image src='/sta/force_systems/Equivalent_VectorSum.PNG' width='5 '> </Image>
@@ -49,7 +49,7 @@ Moving a force ALONG its line of action:
 
 </SubSubSection>
 
-<SubSubSection title="Allowable Moment Transformations" id="allowable moment transformations">
+<SubSubSection title="Allowable moment transformations" id="allowable moment transformations">
 
 Replacing a force couple with a couple moment: 
 <Image src='/sta/force_systems/Equivalent_CoupleReplace.png' width='5 '> </Image>
