friction sentencing tense
put all titles and subtitles into sentencing tense in friction page

--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -22,8 +22,8 @@ import Example from "../../components/Example.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#static_friction'>Static Friction</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#tip_slip'>Tipping vs. Slipping</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#static_friction'>Static friction</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#tip_slip'>Tipping vs. slipping</a></li>
       </ul>
       </div>
 
@@ -79,7 +79,7 @@ The maximum static frictional force is written as:
 
 </Section>
 
-<SubSection title="Static Friction" id="static_friction">
+<SubSection title="Static friction" id="static_friction">
 
 Static friction is the friction between two bodies when there is no movement between them.
 
@@ -135,7 +135,7 @@ Examples of coefficients of static friction:
 
 </SubSection>
 
-<SubSection title="Tipping vs. Slipping" id="tip_slip">
+<SubSection title="Tipping vs. slipping" id="tip_slip">
 
 Consider a box of length <i>l</i> that is sitting on a rough surface with an applied load <i>P</i> on the right side. 
 
