center of mass sentencing tense
put all titles, subtitles, and subsubtitles into sentencing tense in center of mass page

--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -26,12 +26,12 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#centroid'>Centroid</a></li> 
-		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#basic_shapes'>Centroids of Basic Shapes</a></li>
-		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#composite_shapes'>Finding Centroids Using Composite Shapes</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#basic_shapes'>Centroids of basic shapes</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#composite_shapes'>Finding centroids using composite shapes</a></li>
       </ul>
       </div>
 
-<Section title="Center of Mass, Gravity, and Volume" id="center_of_mass">
+<Section title="Center of mass, gravity, and volume" id="center_of_mass">
 
 <p>
 The center of mass, center of gravity, and center of volume of an object are all very similar. In fact, they are all the same if the density of the object is constant and gravity is constant along an object. 
@@ -188,7 +188,7 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 </SubSection>
 <!-- Lectures 28, 29  -->
 
-<SubSubSection title = "Axes of Symmetry">
+<SubSubSection title = "Axes of symmetry">
 
 <Image src="/sta/centers_of_mass/AxisOfSymmetry.png" width="7"></Image>
 
@@ -196,7 +196,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
 
 </SubSubSection>
 
-<SubSubSection title="Centroids of Basic Shapes" id="basic_shapes">
+<SubSubSection title="Centroids of basic shapes" id="basic_shapes">
 
 <style>
     /* Center-align all table content */
@@ -276,7 +276,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
 
 </SubSubSection> 
 
-<SubSubSection title = "Finding Centroids Using Composite Shapes" id = "composite_shapes">
+<SubSubSection title = "Finding centroids using composite shapes" id = "composite_shapes">
 
 <p> We can find the centroid of more complicated shapes by breaking them up into simpler shapes and finding the centroids of those simpler shapes. </p>
 
