--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -13,11 +13,11 @@ import Example from "../../components/Example.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#fluid_pressure'>Fluid Pressure</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#fluid_pressure'>Fluid pressure</a></li> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#buoyancy'>Buoyancy</a></li>
       </ul>
       </div>
-<Section title="Hydrostatic Fluid Pressure" id="hydrostatic_fluid_pressure">
+<Section title="Hydrostatic fluid pressure" id="hydrostatic_fluid_pressure">
 
 <!-- Lecture 30, 31, 32 -->
 <p> <strong>Pascal's Law:</strong> A fluid at rest creates a pressure that is the same in all directions. 
@@ -28,7 +28,7 @@ import Example from "../../components/Example.astro"
 
 </Section>
 
-<SubSection title="Fluid Pressure" id="fluid_pressure">
+<SubSection title="Fluid pressure" id="fluid_pressure">
 
 For an incompressible fluid (density <InlineEquation equation='\\rho' />) at rest, the pressure <InlineEquation equation='P' /> varies linearly with fluid depth <InlineEquation equation='z' />. This means that the pressure along a horizontal plane (at a certain depth <InlineEquation equation='z' />) is constant.
 
@@ -64,7 +64,7 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 		
 
 
-<SubSection title="Pressure, Distributed Loads, and Free Body Diagrams" id="fluid_pressure_FBD">
+<SubSection title="Pressure, distributed loads, and free body diagrams" id="fluid_pressure_FBD">
 
 <p> Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">Distributed Loads Reference Page</a>. 
 </p> 
@@ -109,7 +109,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 </SubSection>
 
-<SubSection title="Fluid Pressure with Slanted and Curved Surfaces" id="fluid_pressure_FBD">
+<SubSection title="Fluid pressure with slanted and curved surfaces" id="fluid_pressure_FBD">
 
 <p> We will often be required to analyze the hydrostatic fluid pressure on surfaces that are not perfectly horizontal or vertical. In these cases, it is easier to redraw our system and create articifial horizontal and vertical "surfaces", adding the force from the FBD of the weight of the water trapped in our horizontal and vertical surfaces. 
 </p>
