virtual work sentencing tense
put all titles, subtitles, and subsubtitles into sentencing tense in virtual work page

--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -19,16 +19,16 @@ import Col from "../../components/Col.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#virtual_displacements'>Virtual Displacements</a><ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#couple_moments'>Couple Moments</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#virtual_displacements'>Virtual displacements</a><ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#couple_moments'>Couple moments</a></li> 
         </ul>
     </li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#principle_virtual_work'>Principle of Virtual Work</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#virtual_work_analysis'>Virtual Work Analysis</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#principle_virtual_work'>Principle of virtual work</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#virtual_work_analysis'>Virtual work analysis</a></li>
       </ul>
       </div>
 
-<Section title="Virtual Work" id="virtual_work">
+<Section title="Virtual work" id="virtual_work">
 
 <!-- Lectures 34 and 35 -->
 
@@ -50,7 +50,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 </Section>
 
-<SubSection title="Virtual Displacements" id="virtual_displacements">
+<SubSection title="Virtual displacements" id="virtual_displacements">
 
 <p> A virtual displacement is an infinitesimally small translation (<InlineEquation equation="dr"/>) and/or rotation (<InlineEquation equation="d\\theta"/>) that is possible in the system. </p>
 
@@ -63,7 +63,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 </SubSection>
 
-<SubSubSection title="Couple Moments" id="couple_moments">
+<SubSubSection title="Couple moments" id="couple_moments">
 
     <p>
     Couple moments can also do work! When a body's rotation and the moment vector are oriented in the same direction, the couple moment does work. 
@@ -101,7 +101,7 @@ Virtual work (<InlineEquation equation='dU' />) is the work produced by a force 
 
 </SubSubSection>
 
-<SubSection title="Principle of Virtual Work" id="principle_virtual_work">
+<SubSection title="Principle of virtual work" id="principle_virtual_work">
 
 If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. We can use this principle to solve for the forces on systems. 
 
@@ -109,7 +109,7 @@ If a body is in equilibrium, the sum of the virtual work done by all the forces 
 
 </SubSection>
 
-<SubSection title="Virtual Work Analysis" id="virtual_work_analysis">
+<SubSection title="Virtual work analysis" id="virtual_work_analysis">
 
 <p>Steps for completing an analysis of a system using virtual work: </p>
 
