create Balancing page

--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -44,8 +44,8 @@ import Section from "../components/Section.astro";
         <Item><a href="/md/Cams?origin=coursemenu">Cams</a> focuses on the different classifications of cams, as well as the steps required to design a cam profile according to the fundemental law of cam design </Item>
         <Item><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a> demonstrates a method for computing the positon, velocity, and acceleration of a mechanism </Item>
         <Item><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a> examines a method to compute the forces and torques on each part of a mechanism </Item>
-        <Item><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a> examines an eariser method to compute external forces and torques if the internal forces are unimportant </Item>
-
+        <Item><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a> examines an easier method to compute external forces and torques if the internal forces are unimportant </Item>
+        <Item><a href="/md/Balancing?origin=coursemenu">Balancing</a> investigates the loads on rotating machinery as well as methods for minimizing them </Item>
         <!--
         <Item> </Item>
         <Item> </Item>
@@ -67,7 +67,7 @@ import Section from "../components/Section.astro";
       <li><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a></li>
       <li><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a></li>
       <li><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a></li>
-      <!--<li><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>-->
+      <li><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>
 
     </ol>
   </section>
